// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadPresets array form 1`] = `
{
  "plugins": [
    [
      "@docusaurus/plugin-content-docs",
      undefined,
    ],
    [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": [],
}
`;

exports[`loadPresets array form composite 1`] = `
{
  "plugins": [
    [
      "@docusaurus/plugin-content-docs",
      {
        "path": "../",
      },
    ],
    [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
    [
      "@docusaurus/plugin-content-pages",
      {
        "path": "../",
      },
    ],
    [
      "@docusaurus/plugin-sitemap",
      undefined,
    ],
  ],
  "themes": [],
}
`;

exports[`loadPresets array form with options 1`] = `
{
  "plugins": [
    [
      "@docusaurus/plugin-content-docs",
      {
        "path": "../",
      },
    ],
    [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": [],
}
`;

exports[`loadPresets mixed form 1`] = `
{
  "plugins": [
    [
      "@docusaurus/plugin-content-docs",
      {
        "path": "../",
      },
    ],
    [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
    [
      "@docusaurus/plugin-content-pages",
      undefined,
    ],
    [
      "@docusaurus/plugin-sitemap",
      undefined,
    ],
  ],
  "themes": [],
}
`;

exports[`loadPresets mixed form with themes 1`] = `
{
  "plugins": [
    [
      "@docusaurus/plugin-content-docs",
      {
        "path": "../",
      },
    ],
    [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
    [
      "@docusaurus/plugin-content-pages",
      undefined,
    ],
    [
      "@docusaurus/plugin-sitemap",
      undefined,
    ],
    [
      "@docusaurus/plugin-test",
      undefined,
    ],
  ],
  "themes": [
    [
      "@docusaurus/theme-classic",
      undefined,
    ],
  ],
}
`;

exports[`loadPresets string form 1`] = `
{
  "plugins": [
    [
      "@docusaurus/plugin-content-docs",
      undefined,
    ],
    [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": [],
}
`;

exports[`loadPresets string form composite 1`] = `
{
  "plugins": [
    [
      "@docusaurus/plugin-content-docs",
      undefined,
    ],
    [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
    [
      "@docusaurus/plugin-content-pages",
      undefined,
    ],
    [
      "@docusaurus/plugin-sitemap",
      undefined,
    ],
  ],
  "themes": [],
}
`;
